@@ -7,8 +7,10 @@ refpolicy (2:2.20140421-10) UNRELEASED; urgency=medium
   * debian/rules: Make the build reproducible (Closes: #778232)
   * Remove deprecated system.users and local.users files
   * debian/control: Update Homepage URL (Closes: #780934)
+  * debian/rules: Allow parallel build now that the build system is supporting
+    it, see #677689
 
- -- Laurent Bigonville <bigon@debian.org>  Thu, 26 Nov 2015 10:58:14 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Thu, 26 Nov 2015 11:11:31 +0100
 
 refpolicy (2:2.20140421-9) unstable; urgency=medium
 
